Fix scroll behaviour on mobile
- Safari on iOS with bottom nav

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -30,7 +30,7 @@
 }
 
 body {
-  @apply min-h-screen overflow-hidden leading-[1.6];
+  @apply min-h-screen leading-[1.6];
   transition: color 0.5s, background-color 0.5s;
   font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
